--- a/Notes/Views/AllNotesPage.xaml
+++ b/Notes/Views/AllNotesPage.xaml
@@ -1,16 +1,48 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:model="clr-namespace:Notes.Models"
+             xmlns:model="clr-namespace:Notes.Models" xmlns:views="clr-namespace:Notes.Views" x:DataType="views:NotePage"
              x:Class="Notes.Views.AllNotesPage"
              Title="Your Notes">
     <AbsoluteLayout>
         <ScrollView AbsoluteLayout.LayoutFlags="All" AbsoluteLayout.LayoutBounds="0, 1, 1, 1">
             <CollectionView x:Name="notesCollection"
-                        ItemsSource="{Binding Notes}"
-                        Margin="20"
                         SelectionMode="Single"
                         SelectionChanged="notesCollection_SelectionChanged">
+                <CollectionView.ItemsSource>
+                    <x:Array Type="{x:Type model:Note}">
+                        <model:Note 
+                            Title="Remember"
+                            Text="Lorem ipsum dolor sitamet, consectetur adipiscing elit"
+                            Date= "2021-03-09"
+                            />
+                        <model:Note 
+                            Title="Remember"
+                            Text="Lorem ipsum dolor sitamet, consectetur adipiscing elit"
+                            Date= "2021-03-09"
+                            />
+                        <model:Note 
+                            Title="Remember"
+                            Text="Lorem ipsum dolor sitamet, consectetur adipiscing elit"
+                            Date= "2021-03-09"
+                            />
+                        <model:Note 
+                            Title="Remember"
+                            Text="Lorem ipsum dolor sitamet, consectetur adipiscing elit"
+                            Date= "2021-03-09"
+                            />
+                        <model:Note 
+                            Title="Remember"
+                            Text="Lorem ipsum dolor sitamet, consectetur adipiscing elit"
+                            Date= "2021-03-09"
+                            />
+                        <model:Note 
+                            Title="Remember"
+                            Text="Lorem ipsum dolor sitamet, consectetur adipiscing elit"
+                            Date= "2021-03-09"
+                            />
+                    </x:Array>
+                </CollectionView.ItemsSource>
                 
                 <CollectionView.ItemTemplate>
                     <DataTemplate x:DataType="model:Note">
